# schulwege

./: .env  .env.example  .gitignore  README.md  dev-backend.sh  dev-frontend.sh  dev.sh  docker-compose.yml  download_ufa.sh  model_config.json  pyproject.toml  serve.sh  start_nominatim.sh  start_opentripplaner.sh  stop_nominatim.sh  stop_opentripplaner.sh  test.csv
backend/: .gitignore  README.md  pyproject.toml
backend/src/: api.py  nominatim.py  places.py
backend/src/util/: fast_csv.py  functions.py  global_state.py  monitor.py
docker/: Dockerfile
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: api.ts
frontend/src/components/: Box.vue  Button.vue  NavBar.vue  SearchSelect.vue
frontend/src/pages/: Schulwege.vue
frontend/src/stores/: nominatim.ts
frontend/src/util/: util.ts
nominatim/: start_nominatim.sh  stop_nominatim.sh
notebooks/: potsdam.ipynb  unfälle.ipynb
opentripplaner/: start_opentripplaner.sh
opentripplanner/: download.sh  start_opentripplanner.sh  stop_opentripplanner.sh
schulkinder/: app.py  db.py  models.py
schulkinder/components/: navbar.py
schulkinder/maps/: nominatim.py  routing.py
schulkinder/routes/: __init__.py  home.py  new_project.py  projects.py
schulwege/: Dockerfile  app.py  db.py  main.py  models.py
schulwege/components/: __init__.py  header.py  info_badges.py  maps.py  project_components.py  search_box.py  table.py  table_upload.py
schulwege/endpoints/: database.py  nominatim.py  opentripplaner.py  routing.py
schulwege/maps/: nominatim.py  routing.py  util.py
schulwege/models/: location.py  project.py  segment.py
schulwege/routes/: home.py  new.py  new_project.py  project.py  projects.py
scripts/: download_otp.sh  download_schools.sh  download_ufa.sh
