[project]
name = "schulwege"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Eichhorn",email = "v.eichhorn@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "nicegui (>=3.3.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "osmnx (>=2.0.6,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry.scripts]
schulwege = "schulwege.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
