[project]
name = "schulwege"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Eichhorn",email = "v.eichhorn@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "osmnx (>=2.0.6,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "streamlit-router (>=0.1.8,<0.2.0)",
    "streamlit-keyup (>=0.3.0,<0.4.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "polyline (>=2.0.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit-folium (>=0.25.3,<0.26.0)",
]

[tool.poetry.scripts]
schulwege = "schulwege.schulwege:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
